syntax = "proto3";

package proto;

option go_package = "github.com/yourusername/agent-platform/proto";

import "proto/common.proto";
import "proto/task.proto";
import "proto/plugin.proto";

// Agent 注册信息
message AgentRegister {
  string agent_id = 1;
  string hostname = 2;
  string ip = 3;
  string os = 4;
  string arch = 5;
  string version = 6;
}

// 心跳消息
message Heartbeat {
  string agent_id = 1;
  Timestamp timestamp = 2;
}

// 从管理平台到 Agent 的消息
message ServerMessage {
  oneof message {
    Response register_response = 1;
    Response heartbeat_ack = 2;
    TaskRequest task_request = 3;  // 新增：任务下发
    InstallPluginRequest install_plugin = 4;  // 插件安装
    UninstallPluginRequest uninstall_plugin = 5;  // 插件卸载
    ListPluginsRequest list_plugins = 6;  // 列出插件
  }
}

// 从 Agent 到管理平台的消息
message AgentMessage {
  oneof message {
    AgentRegister register = 1;
    Heartbeat heartbeat = 2;
    TaskResult task_result = 3;  // 新增：任务结果
    TaskLog task_log = 4;  // 新增：任务日志
    InstallPluginResponse install_plugin_response = 5;  // 插件安装响应
    UninstallPluginResponse uninstall_plugin_response = 6;  // 插件卸载响应
    ListPluginsResponse list_plugins_response = 7;  // 列出插件响应
  }
}

// Agent 服务定义
service AgentService {
  // 双向流连接
  rpc Connect(stream AgentMessage) returns (stream ServerMessage);
}
